--- a/src/index.html
+++ b/src/index.html
@@ -12,5 +12,11 @@
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+
+
+
 </body>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5FsAGu-VPaTbKGqBODX-_5XkxPSaQZo"></script>
+
+
 </html>
